[pom] Remove allow attach self and opens on java.lang